# practical-crypto-course

./: .replit  Course description-practical-crypto Detailed (1).docx  Readme.docx  encryptionn.txt  filetoalice.json  lab1.py  lab10partA.py  lab10partB.py  lab10partBcbc.py  lab10partC.py  lab11partA.py  lab12partA.py  lab13client.py  lab13server.py  lab2.py  lab3partA.py  lab4A.py  lab4B.py  lab4partB.py  lab5partA.py  lab5partB.py  lab6partA.py  lab6partB.py  lab6partBbob.py  lab7partA.py  lab7partAtomac.py  lab7partB.py  lab7partD.py  lab7partDmp3.py  lab8alice.py  lab8bob.py  lab8partA.py  lab8partB.py  lab9B.py  lect2.py  lect9partB.py  main.py  private_key.pem  public_key.pem  pyproject.toml  (+8 more)
Lectures/: Introduction_to_Cryptography_Lect2 Classical Cryptography.pptx
alice/: keypairA.pem
bob/: keypairB.pem
